--- a/style.css
+++ b/style.css
@@ -13,11 +13,16 @@ body{
 .half img{
     width: 100%;
 }
+#web-id{
+    border: 2px solid ;
+    margin-top: 50px;
+}
 h1{
     font-size: 50px;
 }
 .title{
     border-left: 5px solid chocolate;
+    padding-left: 10px;
 }
 .color-title{
     color: deeppink;
@@ -29,9 +34,9 @@ section{
 }
 .button{
     text-decoration: none;
-    background-color: darkcyan;
+    background-color: rgb(26, 153, 212);
     color: white;
-    padding: 10px 20px;
+    padding: 15px 30px;
     border-radius: 7px;
 }
 
@@ -39,34 +44,34 @@ h2{
     font-size: 45px;
     text-align: center;
 }
-.mission{
+.target{
     display: flex;
     border: 2px solid blue;
     width: 80%;
     margin: 0 10%;
     margin-bottom: 70px;
 }
-.mission-item{
+.target-item{
     border: 2px solid orange;
     width: 35%;
     margin: 0 1% 0 1%;
     padding: 10px 25px;
     border-radius: 20px;
 }
-.mission-item h3{
+.target-item h3{
     font-size: 20px;
 }
-.mission-item img{
+.target-item img{
     width: 50%;
 }
 #first-item{
-    background-color: paleturquoise;
+    background-color: rgba(134, 194, 100, 0.3);
 }
 #second-item{
-    background-color: pink;
+    background-color: rgba(197, 78, 207, 0.2);
 }
 #third-item{
-    background-color: navajowhite;
+    background-color: rgba(26, 161, 32, 0.582);
 }
 
 .flexible{
@@ -80,10 +85,10 @@ h2{
     font-size: 20px;
     margin-bottom: 40px;
 }
-.image-part{
+.thirty-percent-part{
     width: 30%;
 }
-.description-part{
+.seventy-percent-part{
     width: 70%;
 }
 footer{
@@ -92,6 +97,19 @@ footer{
     color: white;
     padding: 30px 0px;
 }
+footer h4{
+    font-family: 'Dancing Script', cursive;
+    font-size: 30px;
+    font-weight: 900;
+}
 footer span{
     color: crimson;
+}
+
+
+#education{
+    border: 2px solid green;
+}
+#education-institude{
+    border: 2px solid blue;
 }
